End-to-end connection, ongoing. Not yet fully working, almost!

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -172,27 +172,37 @@ services:
     env_file:
       - .env
     environment:
+      # - AUTH_VERIFY_URL=http://cim-fastapi:8000/gd-cim-api/verify_token
       - AUTH_VERIFY_URL=https://mc-a4.lab.uvalight.net/gd-cim-api/verify_token
-    command: uvicorn main:app --host 0.0.0.0 --port 8011
+      - GD_BEARER_TOKEN=${JWT_TOKEN}
+    command: uvicorn main:app --host 0.0.0.0 --port 8011 --log-level info
     ports:
       - "8011:8011"
+    volumes:
+      - "./sites_data/sites_loc_metrics.json:/data/sites_latlngpue.json:ro"
+      
 
   # Simple publisher that streams Mongo inserts to the webhook
   mongo-stream-publisher:
     image: python:3.12-slim
     depends_on:
       mongo-indexes: { condition: service_completed_successfully }
-      cim-service-mock:  { condition: service_started }
+      ci-calc:  { condition: service_started }
+    env_file:
+      - .env
     environment:
       - MONGO_URI=mongodb://metrics-db:27017,metrics-db-2:27017,metrics-db-3:27017/?replicaSet=rs0
       - WATCH_DB=metricsdb
       - WATCH_COLL=metrics
       # - WEBHOOK_URL=http://cim-service-mock/
+      - GD_BEARER_TOKEN=${JWT_TOKEN}
       - WEBHOOK_URL=http://ci-calc:8011/ci
-      - WEBHOOK_BEARER={JWT_TOKEN}
+      - SITES_URL=http://ci-calc:8011/load-sites
+      # - NODE_TO_SITE_FILE=/data/node_to_site.json
+      - RESULT_FORWARD_URL=http://cim-fastapi:8000/gd-cim-api/ci-result
     volumes:
-      - ./publisher:/app:ro
-    command: bash -lc "pip install --no-cache-dir pymongo requests && exec python -u /app/publisher.py"
+      - ./publisher/publisher.py:/app/publisher.py:ro
+    command: bash -lc "pip install --no-cache-dir pymongo requests python-dateutil && exec python -u /app/publisher.py"
     restart: unless-stopped
 
   # Automated smoke-test to prove failover & integrity
