--- a/auth_metrics_server/Dockerfile
+++ b/auth_metrics_server/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.12-slim
 WORKDIR /app
 
 COPY requirements.txt .
-RUN apt-get update && apt-get install -y build-essential libffi-dev libssl-dev \
+RUN apt-get update && apt-get install -y build-essential libffi-dev libssl-dev curl jq \
     && pip install --no-cache-dir -r requirements.txt \
     && apt-get purge -y build-essential && apt-get autoremove -y
 
